# bybit-copybot-pro

./: .env  .env.backup  .gitignore  BOT_STATUS_CHECK.md  CONFIGURATION_GUIDE.md  DEPLOYMENT.md  README.md  START_BOT.bat  add_native_tpsl.py  analyze_excel_files.py  analyze_log_errors.py  analyze_trading_data.py  bot_database_export.xlsx  bot_status_summary.py  bot_status_summary.xlsx  bybit_api_export.py  bybit_api_export_fixed.py  bybit_comprehensive_trade_history.xlsx  bybit_copybot_session.session  bybit_copybot_session.session-journal  bybit_copybot_session.session-shm  bybit_copybot_session.session-wal  bybit_current_positions.xlsx  bybit_demo_audit_logger.py  bybit_demo_export_20251006_081323.xlsx  bybit_demo_export_fixed.py  bybit_demo_export_trades.py  bybit_demo_trade_summary.xlsx  bybit_demo_trades.xlsx  bybit_demo_trades_api.xlsx  bybit_order_history.xlsx  bybit_orders_20251008_193705.xlsx  check_biousdt_status.py  check_current_prices.py  check_daily_stats.py  check_db.py  check_environment.py  check_orders.py  check_pythusdt_instrument.py  comprehensive_export.py  (+53 more)
app/: __init__.py  bybit_client.py  logging_system.py  main.py  margin_mode.py  order_cleanup.py  settings.py  telegram_client.py
app/api/: health.py  (+1 more)
doc/: 10_11.md  10_12_2.md  10_12_fixes.md  10_12_requirement.txt  10_15.md  CLIENT_EXPLANATION.md  FINAL_VERDICT_2025-10-15.md  LIVE_BOT_TEST_RESULTS.md  New Text Document.txt  izzu 2025-10-10.docx  project.txt  requirement.txt  signals from channels.txt
logs/: .gitkeep
migrations/: 004_unify_trades_state.sql  005_add_report_columns.sql
scripts/: diagnose_signal_failures.py  generate_evidence.ps1  generate_evidence.sh  migrate_db.py  run_migration_005.py  selfcheck.py  show_filtered_symbols.py  validate_order_params.py  validate_trading_logic.py  verify_compliance.py
tests/: conftest.py  test_acceptance.py  test_bybit.py  test_client_32_checklist.py  test_client_spec_compliance.py  test_critical_fixes.py  test_db.py  test_entry_exit_policies.py  test_error_fixes.py  test_fsm.py  test_fsm_live.py  test_fsm_tpsl.py  test_hedge.py  test_invariants.py  test_leverage_policy.py  test_modes.py  test_oco.py  test_parser_compliance.py  test_pyramid.py  test_pyramid_step4.py  test_reports.py  test_signals.py  test_strategies.py  test_symbol_filter.py  test_tpsl_retry.py  test_trailing.py
(+111 files in other folders)
